fix build project

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "jsx": "react-jsx",
-    "emitDeclarationOnly":true,
+    "noEmit": true,
 
     /* Linting */
     "strict": true,
